--- a/workflow-templates/knative-go-build.yaml
+++ b/workflow-templates/knative-go-build.yaml
@@ -52,6 +52,7 @@ jobs:
           tags="$(grep -I  -r '// +build' . | \
                 grep -v '^./vendor/' | \
                 grep -v '^./hack/' | \
+                grep -v '^./third_party' | \
                 cut -f3 -d' ' | \
                 sort | uniq | \
                 grep -v '^!' | \
