--- a/workflow-templates/knative-go-build.yaml
+++ b/workflow-templates/knative-go-build.yaml
@@ -48,4 +48,16 @@ jobs:
           fetch-depth: 1
 
       - name: Build
-        run: go build -v ./...
+        run: |
+          tags="$(grep -I  -r '// +build' . | \
+                grep -v '^./vendor/' | \
+                grep -v '^./hack/' | \
+                grep -v '^./third_party' | \
+                cut -f3 -d' ' | \
+                sort | uniq | \
+                grep -v '^!' | \
+                tr '\n' ' ')"
+
+          echo "Building with tags: ${tags}"
+          go test -vet=off -tags "${tags}" -run=^$ ./... | grep -v "no test"
+
