--- a/workflow-templates/knative-style.yaml
+++ b/workflow-templates/knative-style.yaml
@@ -23,6 +23,39 @@ on:
 
 jobs:
 
+  autoformat:
+    name: Auto-format and Check
+    runs-on: ubuntu-latest
+
+    steps:
+
+      - name: Set up Go 1.14.x
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.14.x
+        id: go
+
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      # Run this last because it alters the workspace.
+      # TODO: add prettier step
+      # TODO: add goimports step
+      - name: Go Format
+        shell: bash
+        run: |
+          gofmt -s -w $(find -path './vendor' -prune -o -path './third_party' -prune -o -type f -name '*.go' -print)
+      - name: Verify
+        shell: bash
+        run: |
+          if [[ $(git diff-index --name-only HEAD --) ]]; then
+              echo "Found diffs in:"
+              git diff-index --name-only HEAD --
+              echo "${{ github.repository }} is out of style. Please run go fmt."
+              exit 1
+          fi
+          echo "${{ github.repository }} is formatted correctly."
+
   lint:
     name: Lint
     runs-on: ubuntu-latest
@@ -38,25 +71,6 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v2
 
-      # TODO: add prettier step
-      # TODO: add goimports step
-
-      - name: Go Format
-        shell: bash
-        run: |
-          gofmt -s -w $(find -path './vendor' -prune -o -path './third_party' -prune -o -type f -name '*.go' -print)
-
-      - name: Verify
-        shell: bash
-        run: |
-          if [[ $(git diff-index --name-only HEAD --) ]]; then
-              echo "Found diffs in:"
-              git diff-index --name-only HEAD --
-              echo "${{ github.repository }} is out of style. Please run go fmt."
-              exit 1
-          fi
-          echo "${{ github.repository }} is formatted correctly."
-
       - id: golangci_configuration
         uses: andstor/file-existence-action@v1
         with:
@@ -71,6 +85,7 @@ jobs:
 
       - name: misspell
         shell: bash
+        if: ${{ always() }}
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ github.token }}
         run: |
@@ -89,9 +104,11 @@ jobs:
           echo '::endgroup::'
 
           echo '::group:: Running github.com/client9/misspell with reviewdog 🐶 ...'
-          find . -type f \
-                 -o -path './vendor' -prune \
-                 -o -path './third_party' -prune |
+          # Don't fail because of misspell
+          set +o pipefail
+          find . -path './vendor' -prune \
+                 -o -path './third_party' -prune \
+                 -o -type f |
           xargs misspell -error |
           reviewdog -efm="%f:%l:%c: %m" \
                 -name="github.com/client9/misspell" \
@@ -105,7 +122,7 @@ jobs:
       # This is mostly copied from https://github.com/get-woke/woke-action-reviewdog/blob/main/entrypoint.sh
       # since their action is not yet released under a stable version.
       - name: Language
-        if: ${{ github.event_name == 'pull_request' }}
+        if: ${{ always() && github.event_name == 'pull_request' }}
         shell: bash
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ github.token }}
