--- a/workflow-templates/knative-style.yaml
+++ b/workflow-templates/knative-style.yaml
@@ -213,8 +213,9 @@ jobs:
           # have only a single formatting argument and that argument is in the last position.
           # But exclude the `fmt.Errorf` calls since there's no `fmt.Error` and `errors.New` is not
           # as versatile.
+          # Also ignore `%T` — to print the type and `%q` to quote the final string.
           fn=$(find . -path './vendor' -prune -o -path './third_party' -prune -o -name '*.pb.go' -prune -o -type f -name '*.go' -print)
-          grep -nE '[^.]+\.(Fatalf|Errorf|Warnf|Infof|Debugf)[^\%]+%[^wq]",[^,]+' $fn | grep -v "fmt.Errorf" |
+          grep -nE '[^.]+\.(Fatalf|Errorf|Warnf|Infof|Debugf)[^\%]+%[^Tq]",[^,]+' $fn | grep -v "fmt.Errorf" |
             while read -r ent ; do
               file=$(echo $ent | cut -d':' -f 1);
               line=$(echo $ent | cut -d':' -f 2);
