--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -29,6 +29,6 @@ jobs:
       if: ${{ github.repository != 'knative-sandbox/.github' }}
       with:
         source_repo: "https://github.com/knative-sandbox/.github.git"
-        source_branch: "master"
+        source_branch: "main"
         destination_repo: "https://x-access-token:${{ github.token }}@github.com/${{ github.repository }}.git"
-        destination_branch: "master"
+        destination_branch: "main"
