--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -39,7 +39,7 @@ jobs:
           fi
     - name: Post failures to Slack
       # Note: using env.SLACK_WEBHOOK here because secrets are not allowed in the if block.
-      if: env.SLACK_WEBHOOK != '' && failed()
+      if: env.SLACK_WEBHOOK != '' && failure()
       uses: rtCamp/action-slack-notify@v2.1.0
       env:
         SLACK_ICON: http://github.com/knative.png?size=48
